# awesome-code

./: .gitignore  README.md  install.sh  pyproject.toml
awesome_code/: __main__.py  agent.py  agent_manager.py  agents.py  cli.py  config.py  hooks.py  llm.py  memory.py  setup.py  skills.py
awesome_code/indexing/: __init__.py  chunker.py  embedder.py  scanner.py  store.py
awesome_code/mcp/: __init__.py  manager.py  tool.py
awesome_code/tools/: __init__.py  base.py  bash.py  index_codebase.py  list_dir.py  load_skill.py  read_file.py  search_codebase.py  spawn_agent.py  write_file.py
