[project]
name = "awesome-code"
version = "0.1.0"
description = "Simple CLI AI coding agent"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
]

[project.scripts]
awesome-code = "awesome_code.cli:main"

[tool.setuptools.packages.find]
include = ["awesome_code*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
